# Form-Lang

./: .dependency-cruiser.cjs  .gitignore  LICENSE  README.md  esbuild.mjs  index.html  langium-config.json  langium-quickstart.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.src.json  valid-form.json
ml/: Domain-Specific-Code-Generation-In-FormLang.ipynb  bun_cluster.ts  bun_server.ts  check_ast.cjs  lib_server.cjs  package.json  pyproject.toml
src/: setupClassic.ts  setupCommon.ts  setupExtended.ts
src/cli/: cli-util.ts  dump-ast.ts  gen-data.ts  gen-react.ts  generator.ts  main.ts
src/compiler/: compilerConfig.ts  compilerUtil.ts  reactCompiler.ts
src/extension/: main.ts
src/generation/: data.ts  formGen.ts
src/language/: component.langium  form-lang-module-lsp.ts  form-lang-module.ts  form-lang-validator.ts  form-lang.langium  main-browser.ts  main.ts  terminals.langium  type.langium
src/lib/: generator.ts  index.ts  language.ts
src/util/: traversal.ts
static/: monacoClassic.html  monacoExtended.html
test/linking/: linking.test.ts
test/parsing/: parsing.test.ts
test/validating/: unique-form-names.form  valid-form.form  validating.test.ts
