[tool.poetry]
name = "form-lang-ml"
version = "0.1.0"
description = ""
authors = ["Guy Or <guydude1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
transformers = "^4.48.2"
datasets = "^3.2.0"
evaluate = "^0.4.3"
pythonmonkey = "^1.1.0"
accelerate = "^1.3.0"
unsloth = "^2025.2.5"
bitsandbytes = "^0.45.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
